--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,16 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+development:
+  adapter: postgresql
+  database: MyDatabase_development
+  pool: 5
+  timeout: 5000
+
+test:
+  adapter: postgresql
+  database: MyDatabase_test
+  pool: 5
   timeout: 5000
 
 development:
@@ -21,9 +28,6 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
 
 production:
   adapter: postgresql
